# interpret-live

./: README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: live-adapters.md
docs/plans/: 2026-07-16-adapters-plan.md
examples/: bench_demo.py
logs/: interpret-live-activity.json  interpret-live-activity.md
src/interpret_live/: __init__.py  audio_codec.py  audio_io.py  bench.py  cli.py  clock.py  config.py  metrics.py  model_worker.py  models.py  pipeline.py  runtime.py  s2s.py  segment.py  session.py  stabilize.py  types.py  vad.py
src/interpret_live/backends/: __init__.py  elevenlabs.py  fake.py  gemini.py  guard.py  nllb.py  piper.py  realtime.py  whisper.py
src/interpret_live/data/: piper_voices.json
tests/: conftest.py  helpers.py  test_audio_codec.py  test_audio_io_real.py  test_audio_sink_contract.py  test_backends_guard.py  test_bench.py  test_cli.py  test_clock.py  test_endpointing.py  test_live_smoke.py  test_metrics.py  test_model_worker.py  test_models.py  test_nllb_adapter.py  test_no_real_sleep.py  test_pipeline.py  test_piper_adapter.py  test_realtime_adapter.py  test_runtime.py  test_s2s.py  test_segment.py  test_session_dual.py  test_stabilize.py  test_types_validation.py  test_vad.py  test_whisper_adapter.py  test_worker_handlers_inprocess.py  worker_handlers.py
